# Health-tracker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PRIVACY.md  README.md  REFACTOR_FINDINGS.md  STRENGTH_ENTRY_REDESIGN.md  alembic.ini  pyproject.toml  railway.toml  todo.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 353259d46b97_initial_schema.py  a1c4f9d2e8b0_laps_zones_enrichment.py  a7e2c5f8b1d3_elevation_and_user_locations.py  b2d5e0f3c1a7_classification.py  b3c6d9e8a1f4_strength_set_performed_at.py  b8f3d21e9a4c_whoop_workout_id_to_string.py  c1a4e8f27b10_goals_rpe_feedback.py  c2f7a4e91b85_activity_lap_hr_zone.py  c3e7b18f92a4_eight_sleep_extra_fields.py  d4f1a8b62c70_whoop_sleep_extras.py  d89f2a41e6c3_sleep_wake_events.py  e4a9b1c3d5f7_strength_sets.py  e8f31a902b94_user_profile_table.py  f5a1c7b2d4e9_whoop_workouts.py  f9c2e1a45b80_oauth_tokens.py
backend/: config.py  database.py  main.py  scheduler.py
backend/clients/: __init__.py  eight_sleep.py  elevation.py  openmeteo.py  strava.py  weather.py  whoop.py
bot/: discord_bot.py  formatters.py  handler.py  telegram_bot.py
deploy/: README.md  com.healthtracker.plist.template  install.sh  update.sh
frontend/: index.html  knip.json  package-lock.json  package.json  tailwind.config.mjs  vite.config.ts
scripts/: backfill_eight_sleep.py  backfill_elevation.py  backfill_lap_hr_zones.py  backfill_sleep_latency.py  backfill_strava.py  backfill_weather.py  classify_all.py  initial_sync.py  purge_streams.py  setup_db.py
tests/: test_database.py
(+225 files in other folders)
